lib/janet.h


typedef enum {
  JANET_SIGNAL_OK,
  JANET_SIGNAL_ERROR,
  JANET_SIGNAL_DEBUG,
  JANET_SIGNAL_YIELD,
  JANET_SIGNAL_USER0,
  JANET_SIGNAL_USER1,
  JANET_SIGNAL_USER2,
  JANET_SIGNAL_USER3,
  JANET_SIGNAL_USER4,
  JANET_SIGNAL_USER5,
  JANET_SIGNAL_USER6,
  JANET_SIGNAL_USER7,
  JANET_SIGNAL_USER8,
  JANET_SIGNAL_USER9,
  JANET_SIGNAL_INTERRUPT = JANET_SIGNAL_USER8,
  JANET_SIGNAL_EVENT = JANET_SIGNAL_USER9,
} JanetSignal;
typedef struct JanetVM JanetVM;
typedef struct JanetGCObject JanetGCObject;
typedef struct JanetFunction JanetFunction;
typedef struct JanetArray JanetArray;
typedef struct JanetBuffer JanetBuffer;
typedef struct JanetTable JanetTable;
typedef struct JanetFiber JanetFiber;
typedef struct JanetFuncDef JanetFuncDef;
typedef struct JanetFuncEnv JanetFuncEnv;
typedef struct JanetKV JanetKV;
typedef struct JanetAbstractType JanetAbstractType;
typedef struct JanetReg JanetReg;
typedef struct JanetRegExt JanetRegExt;
typedef struct JanetMethod JanetMethod;
typedef struct JanetSourceMapping JanetSourceMapping;
typedef struct JanetSymbolMap JanetSymbolMap;
typedef struct JanetByteView JanetByteView;
typedef enum JanetType {
  JANET_NUMBER,
  JANET_NIL,
  JANET_BOOLEAN,
  JANET_FIBER,
  JANET_STRING,
  JANET_SYMBOL,
  JANET_KEYWORD,
  JANET_ARRAY,
  JANET_TUPLE,
  JANET_TABLE,
  JANET_STRUCT,
  JANET_BUFFER,
  JANET_FUNCTION,
  JANET_CFUNCTION,
  JANET_ABSTRACT,
  JANET_POINTER
} JanetType;
typedef union Janet Janet;
union Janet {
  uint64_t u64;
  int64_t i64;
  double number;
  void *pointer;
};
typedef union Janet Janet;
union Janet {
  struct {
#ifdef JANET_BIG_ENDIAN
    uint32_t type;
    union {
      int32_t integer;
      void *pointer;
    } payload;
#else
    union {
      int32_t integer;
      void *pointer;
    } payload;
    uint32_t type;
#endif
  } tagged;
  double number;
  uint64_t u64;
};
typedef struct Janet Janet;
struct Janet {
  union {
    uint64_t u64;
    double number;
    int32_t integer;
    void *pointer;
    const void *cpointer;
  } as;
  JanetType type;
};
typedef Janet (*JanetCFunction)(int32_t argc, Janet *argv);
typedef const uint8_t *JanetString;
typedef const uint8_t *JanetSymbol;
typedef const uint8_t *JanetKeyword;
typedef const Janet *JanetTuple;
typedef const JanetKV *JanetStruct;
typedef struct JanetStream JanetStream;
struct JanetStream {
  JanetHandle handle;
  uint32_t flags;
  uint32_t index;
  JanetFiber *read_fiber;
  JanetFiber *write_fiber;
  const void *methods; 
};
typedef void (*JanetEVCallback)(JanetFiber *fiber, JanetAsyncEvent event);
struct JanetGCObject {
  int32_t flags;
  union {
    JanetGCObject *next;
    volatile JanetAtomicInt refcount; 
  } data;
};
struct JanetFiber {
  JanetGCObject gc;   
  int32_t flags;      
  int32_t frame;      
  int32_t stackstart; 
  int32_t stacktop; 
  int32_t capacity; 
  int32_t maxstack; 
  JanetTable *env;  
  Janet *data;      
  JanetFiber
      *child; 
  Janet last_value; 
#ifdef JANET_EV
  uint32_t sched_id; 
  JanetEVCallback ev_callback; 
  JanetStream *ev_stream;      
  void *ev_state; 
  void *supervisor_channel; 
#endif
};
struct JanetArray {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  Janet *data;
};
struct JanetBuffer {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  uint8_t *data;
};
struct JanetTable {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  int32_t deleted;
  JanetKV *data;
  JanetTable *proto;
};
struct JanetKV {
  Janet key;
  Janet value;
};
struct JanetSourceMapping {
  int32_t line;
  int32_t column;
};
struct JanetSymbolMap {
  uint32_t birth_pc;
  uint32_t death_pc;
  uint32_t slot_index;
  const uint8_t *symbol;
};
struct JanetFuncDef {
  JanetGCObject gc;
  int32_t *environments; 
  Janet *constants;
  JanetFuncDef **defs;
  uint32_t *bytecode;
  uint32_t *closure_bitset; 
  JanetSourceMapping *sourcemap;
  JanetString source;
  JanetString name;
  JanetSymbolMap *symbolmap;
  int32_t flags;
  int32_t slotcount; 
  int32_t arity;     
  int32_t min_arity; 
  int32_t max_arity; 
  int32_t constants_length;
  int32_t bytecode_length;
  int32_t environments_length;
  int32_t defs_length;
  int32_t symbolmap_length;
};
struct JanetFuncEnv {
  JanetGCObject gc;
  union {
    JanetFiber *fiber;
    Janet *values;
  } as;
  int32_t length; 
  int32_t offset; 
};
struct JanetFunction {
  JanetGCObject gc;
  JanetFuncDef *def;
  JanetFuncEnv *envs[];
};
typedef struct {
  void *m_state;
  void *u_state;
  int flags;
  const uint8_t *data;
  const JanetAbstractType *at;
} JanetMarshalContext;
struct JanetAbstractType {
  const char *name;
  int (*gc)(void *data, size_t len);
  int (*gcmark)(void *data, size_t len);
  int (*get)(void *data, Janet key, Janet *out);
  void (*put)(void *data, Janet key, Janet value);
  void (*marshal)(void *p, JanetMarshalContext *ctx);
  void *(*unmarshal)(JanetMarshalContext *ctx);
  void (*tostring)(void *p, JanetBuffer *buffer);
  int (*compare)(void *lhs, void *rhs);
  int32_t (*hash)(void *p, size_t len);
  Janet (*next)(void *p, Janet key);
  Janet (*call)(void *p, int32_t argc, Janet *argv);
  size_t (*length)(void *p, size_t len);
  JanetByteView (*bytes)(void *p, size_t len);
};
struct JanetReg {
  const char *name;
  JanetCFunction cfun;
  const char *documentation;
};
struct JanetRegExt {
  const char *name;
  JanetCFunction cfun;
  const char *documentation;
  const char *source_file;
  int32_t source_line;
};
struct JanetMethod {
  const char *name;
  JanetCFunction cfun;
};
struct JanetByteView {
  const uint8_t *bytes;
  int32_t len;
};
typedef struct {
  int32_t stackn;
  int gc_handle;
  JanetFiber *vm_fiber;
  jmp_buf *vm_jmp_buf;
  Janet *vm_return_reg;
  jmp_buf buf;
  Janet payload;
} JanetTryState;
JANET_API void janet_clear_memory(void);
JANET_API void janet_gcroot(Janet root);
JANET_API int janet_gcunroot(Janet root);
JANET_API int janet_gcunrootall(Janet root);
JANET_API int janet_gclock(void);
JANET_API void janet_gcunlock(int handle);
JANET_API void janet_gcpressure(size_t s);
JANET_API JanetFuncDef *janet_funcdef_alloc(void);
JANET_API JanetFunction *janet_thunk(JanetFuncDef *def);
JANET_API JanetFunction *janet_thunk_delay(Janet x);
JANET_API int janet_verify(JanetFuncDef *def);
JANET_API JanetBuffer *janet_pretty(JanetBuffer *buffer, int depth, int flags,
                                    Janet x);
JANET_API void janet_try_init(JanetTryState *state);
JANET_API void janet_restore(JanetTryState *state);
JANET_API int janet_equals(Janet x, Janet y);
JANET_API int32_t janet_hash(Janet x);
JANET_API int janet_compare(Janet x, Janet y);
JANET_API int janet_cstrcmp(JanetString str, const char *other);
JANET_API Janet janet_in(Janet ds, Janet key);
JANET_API Janet janet_get(Janet ds, Janet key);
JANET_API Janet janet_next(Janet ds, Janet key);
JANET_API Janet janet_getindex(Janet ds, int32_t index);
JANET_API int32_t janet_length(Janet x);
JANET_API Janet janet_lengthv(Janet x);
JANET_API void janet_put(Janet ds, Janet key, Janet value);
JANET_API void janet_putindex(Janet ds, int32_t index, Janet value);
JANET_API Janet janet_wrap_number_safe(double x);
JANET_API int janet_keyeq(Janet x, const char *cstring);
JANET_API int janet_streq(Janet x, const char *cstring);
JANET_API int janet_symeq(Janet x, const char *cstring);
JANET_API int32_t janet_sorted_keys(const JanetKV *dict, int32_t cap,
                                    int32_t *index_buffer);
JANET_API int janet_init(void);
JANET_API void janet_deinit(void);
JANET_API JanetVM *janet_vm_alloc(void);
JANET_API JanetVM *janet_local_vm(void);
JANET_API void janet_vm_free(JanetVM *vm);
JANET_API void janet_vm_save(JanetVM *into);
JANET_API void janet_vm_load(JanetVM *from);
JANET_API void janet_interpreter_interrupt(JanetVM *vm);
JANET_API void janet_interpreter_interrupt_handled(JanetVM *vm);
JANET_API JanetSignal janet_continue(JanetFiber *fiber, Janet in, Janet *out);
JANET_API JanetSignal janet_continue_signal(JanetFiber *fiber, Janet in,
                                            Janet *out, JanetSignal sig);
JANET_API JanetSignal janet_pcall(JanetFunction *fun, int32_t argn,
                                  const Janet *argv, Janet *out,
                                  JanetFiber **f);
JANET_API JanetSignal janet_step(JanetFiber *fiber, Janet in, Janet *out);
JANET_API Janet janet_call(JanetFunction *fun, int32_t argc, const Janet *argv);
JANET_API Janet janet_mcall(const char *name, int32_t argc, Janet *argv);
JANET_API void janet_stacktrace(JanetFiber *fiber, Janet err);
JANET_API void janet_stacktrace_ext(JanetFiber *fiber, Janet err,
                                    const char *prefix);
JANET_API void janet_sandbox(uint32_t flags);
JANET_API void janet_sandbox_assert(uint32_t forbidden_flags);
typedef void (*JanetScratchFinalizer)(void *);
JANET_API void *janet_smalloc(size_t size);
JANET_API void *janet_srealloc(void *mem, size_t size);
JANET_API void *janet_scalloc(size_t nmemb, size_t size);
JANET_API void janet_sfinalizer(void *mem, JanetScratchFinalizer finalizer);
JANET_API void janet_sfree(void *mem);
typedef enum {
  JANET_BINDING_NONE,
  JANET_BINDING_DEF,
  JANET_BINDING_VAR,
  JANET_BINDING_MACRO,
  JANET_BINDING_DYNAMIC_DEF,
  JANET_BINDING_DYNAMIC_MACRO
} JanetBindingType;
typedef struct {
  JanetBindingType type;
  Janet value;
  enum {
    JANET_BINDING_DEP_NONE,
    JANET_BINDING_DEP_RELAXED,
    JANET_BINDING_DEP_NORMAL,
    JANET_BINDING_DEP_STRICT,
  } deprecation;
} JanetBinding;
JANET_API void janet_def(JanetTable *env, const char *name, Janet val,
                         const char *documentation);
JANET_API void janet_var(JanetTable *env, const char *name, Janet val,
                         const char *documentation);
JANET_API void janet_cfuns(JanetTable *env, const char *regprefix,
                           const JanetReg *cfuns);
JANET_API void janet_cfuns_prefix(JanetTable *env, const char *regprefix,
                                  const JanetReg *cfuns);
JANET_API JanetBindingType janet_resolve(JanetTable *env, JanetSymbol sym,
                                         Janet *out);
JANET_API JanetBinding janet_resolve_ext(JanetTable *env, JanetSymbol sym);
JANET_API Janet janet_resolve_core(const char *name);
JANET_API void janet_cfuns_ext(JanetTable *env, const char *regprefix,
                               const JanetRegExt *cfuns);
JANET_API void janet_cfuns_ext_prefix(JanetTable *env, const char *regprefix,
                                      const JanetRegExt *cfuns);
JANET_API void janet_def_sm(JanetTable *env, const char *name, Janet val,
                            const char *documentation, const char *source_file,
                            int32_t source_line);
JANET_API void janet_var_sm(JanetTable *env, const char *name, Janet val,
                            const char *documentation, const char *source_file,
                            int32_t source_line);
JANET_API void janet_register(const char *name, JanetCFunction cfun);
JANET_NO_RETURN JANET_API void janet_signalv(JanetSignal signal, Janet message);
JANET_NO_RETURN JANET_API void janet_panicv(Janet message);
JANET_NO_RETURN JANET_API void janet_panic(const char *message);
JANET_NO_RETURN JANET_API void janet_panics(JanetString message);
JANET_NO_RETURN JANET_API void janet_panicf(const char *format, ...);
JANET_API void janet_dynprintf(const char *name, FILE *dflt_file,
                               const char *format, ...);
JANET_NO_RETURN JANET_API void janet_panic_type(Janet x, int32_t n,
                                                int expected);
JANET_NO_RETURN JANET_API void
janet_panic_abstract(Janet x, int32_t n, const JanetAbstractType *at);
JANET_API void janet_arity(int32_t arity, int32_t min, int32_t max);
JANET_API void janet_fixarity(int32_t arity, int32_t fix);
JANET_API int janet_getmethod(JanetKeyword method, const JanetMethod *methods,
                              Janet *out);
JANET_API Janet janet_nextmethod(const JanetMethod *methods, Janet key);
JANET_API double janet_getnumber(const Janet *argv, int32_t n);
JANET_API JanetArray *janet_getarray(const Janet *argv, int32_t n);
JANET_API JanetTuple janet_gettuple(const Janet *argv, int32_t n);
JANET_API JanetTable *janet_gettable(const Janet *argv, int32_t n);
JANET_API JanetStruct janet_getstruct(const Janet *argv, int32_t n);
JANET_API JanetString janet_getstring(const Janet *argv, int32_t n);
JANET_API const char *janet_getcstring(const Janet *argv, int32_t n);
JANET_API const char *janet_getcbytes(const Janet *argv, int32_t n);
JANET_API JanetSymbol janet_getsymbol(const Janet *argv, int32_t n);
JANET_API JanetKeyword janet_getkeyword(const Janet *argv, int32_t n);
JANET_API JanetBuffer *janet_getbuffer(const Janet *argv, int32_t n);
JANET_API JanetFiber *janet_getfiber(const Janet *argv, int32_t n);
JANET_API JanetFunction *janet_getfunction(const Janet *argv, int32_t n);
JANET_API JanetCFunction janet_getcfunction(const Janet *argv, int32_t n);
JANET_API int janet_getboolean(const Janet *argv, int32_t n);
JANET_API void *janet_getpointer(const Janet *argv, int32_t n);
JANET_API int32_t janet_getnat(const Janet *argv, int32_t n);
JANET_API int32_t janet_getinteger(const Janet *argv, int32_t n);
JANET_API int16_t janet_getinteger16(const Janet *argv, int32_t n);
JANET_API int64_t janet_getinteger64(const Janet *argv, int32_t n);
JANET_API uint32_t janet_getuinteger(const Janet *argv, int32_t n);
JANET_API uint16_t janet_getuinteger16(const Janet *argv, int32_t n);