janet_bindings/src/bindings.rs

unsafe extern "C" {
    pub fn janet_clear_memory();
}
unsafe extern "C" {
    pub fn janet_gcroot(root: Janet);
}
unsafe extern "C" {
    pub fn janet_gcunroot(root: Janet) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_gcunrootall(root: Janet) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_gclock() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_gcunlock(handle: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn janet_gcpressure(s: usize);
}
unsafe extern "C" {
    pub fn janet_funcdef_alloc() -> *mut JanetFuncDef;
}
unsafe extern "C" {
    pub fn janet_thunk(def: *mut JanetFuncDef) -> *mut JanetFunction;
}
unsafe extern "C" {
    pub fn janet_thunk_delay(x: Janet) -> *mut JanetFunction;
}
unsafe extern "C" {
    pub fn janet_verify(def: *mut JanetFuncDef) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_pretty(
        buffer: *mut JanetBuffer,
        depth: ::std::os::raw::c_int,
        flags: ::std::os::raw::c_int,
        x: Janet,
    ) -> *mut JanetBuffer;
}
unsafe extern "C" {
    pub fn janet_try_init(state: *mut JanetTryState);
}
unsafe extern "C" {
    pub fn janet_restore(state: *mut JanetTryState);
}
unsafe extern "C" {
    pub fn janet_equals(x: Janet, y: Janet) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_hash(x: Janet) -> i32;
}
unsafe extern "C" {
    pub fn janet_compare(x: Janet, y: Janet) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_cstrcmp(
        str_: JanetString,
        other: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_in(ds: Janet, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_get(ds: Janet, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_next(ds: Janet, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_getindex(ds: Janet, index: i32) -> Janet;
}
unsafe extern "C" {
    pub fn janet_length(x: Janet) -> i32;
}
unsafe extern "C" {
    pub fn janet_lengthv(x: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_put(ds: Janet, key: Janet, value: Janet);
}
unsafe extern "C" {
    pub fn janet_putindex(ds: Janet, index: i32, value: Janet);
}
unsafe extern "C" {
    pub fn janet_wrap_number_safe(x: f64) -> Janet;
}
unsafe extern "C" {
    pub fn janet_keyeq(x: Janet, cstring: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_streq(x: Janet, cstring: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_symeq(x: Janet, cstring: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_sorted_keys(dict: *const JanetKV, cap: i32, index_buffer: *mut i32) -> i32;
}
unsafe extern "C" {
    pub fn janet_init() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_deinit();
}
unsafe extern "C" {
    pub fn janet_vm_alloc() -> *mut JanetVM;
}
unsafe extern "C" {
    pub fn janet_local_vm() -> *mut JanetVM;
}
unsafe extern "C" {
    pub fn janet_vm_free(vm: *mut JanetVM);
}
unsafe extern "C" {
    pub fn janet_vm_save(into: *mut JanetVM);
}
unsafe extern "C" {
    pub fn janet_vm_load(from: *mut JanetVM);
}
unsafe extern "C" {
    pub fn janet_interpreter_interrupt(vm: *mut JanetVM);
}
unsafe extern "C" {
    pub fn janet_interpreter_interrupt_handled(vm: *mut JanetVM);
}
unsafe extern "C" {
    pub fn janet_continue(fiber: *mut JanetFiber, in_: Janet, out: *mut Janet) -> JanetSignal;
}
unsafe extern "C" {
    pub fn janet_continue_signal(
        fiber: *mut JanetFiber,
        in_: Janet,
        out: *mut Janet,
        sig: JanetSignal,
    ) -> JanetSignal;
}
unsafe extern "C" {
    pub fn janet_pcall(
        fun: *mut JanetFunction,
        argn: i32,
        argv: *const Janet,
        out: *mut Janet,
        f: *mut *mut JanetFiber,
    ) -> JanetSignal;
}
unsafe extern "C" {
    pub fn janet_step(fiber: *mut JanetFiber, in_: Janet, out: *mut Janet) -> JanetSignal;
}
unsafe extern "C" {
    pub fn janet_call(fun: *mut JanetFunction, argc: i32, argv: *const Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_mcall(name: *const ::std::os::raw::c_char, argc: i32, argv: *mut Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_stacktrace(fiber: *mut JanetFiber, err: Janet);
}
unsafe extern "C" {
    pub fn janet_stacktrace_ext(
        fiber: *mut JanetFiber,
        err: Janet,
        prefix: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn janet_sandbox(flags: u32);
}
unsafe extern "C" {
    pub fn janet_sandbox_assert(forbidden_flags: u32);
}
pub type JanetScratchFinalizer =
    ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>;
unsafe extern "C" {
    pub fn janet_smalloc(size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_srealloc(
        mem: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_scalloc(nmemb: usize, size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_sfinalizer(mem: *mut ::std::os::raw::c_void, finalizer: JanetScratchFinalizer);
}
unsafe extern "C" {
    pub fn janet_sfree(mem: *mut ::std::os::raw::c_void);
}
pub type JanetBindingType = ::std::os::raw::c_uint;
pub const JANET_BINDING_TYPE_JANET_BINDING_NONE: JanetBindingType = 0;
pub const JANET_BINDING_TYPE_JANET_BINDING_DEF: JanetBindingType = 1;
pub const JANET_BINDING_TYPE_JANET_BINDING_VAR: JanetBindingType = 2;
pub const JANET_BINDING_TYPE_JANET_BINDING_MACRO: JanetBindingType = 3;
pub const JANET_BINDING_TYPE_JANET_BINDING_DYNAMIC_DEF: JanetBindingType = 4;
pub const JANET_BINDING_TYPE_JANET_BINDING_DYNAMIC_MACRO: JanetBindingType = 5;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetBinding {
    pub type_: JanetBindingType,
    pub value: Janet,
    pub deprecation: JanetBindingType,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetBinding"][::std::mem::size_of::<JanetBinding>() - 24usize];
    ["Alignment of JanetBinding"][::std::mem::align_of::<JanetBinding>() - 8usize];
    ["Offset of field: JanetBinding::type_"][::std::mem::offset_of!(JanetBinding, type_) - 0usize];
    ["Offset of field: JanetBinding::value"][::std::mem::offset_of!(JanetBinding, value) - 8usize];
    ["Offset of field: JanetBinding::deprecation"]
        [::std::mem::offset_of!(JanetBinding, deprecation) - 16usize];
};
unsafe extern "C" {
    pub fn janet_def(
        env: *mut JanetTable,
        name: *const ::std::os::raw::c_char,
        val: Janet,
        documentation: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn janet_var(
        env: *mut JanetTable,
        name: *const ::std::os::raw::c_char,
        val: Janet,
        documentation: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn janet_cfuns(
        env: *mut JanetTable,
        regprefix: *const ::std::os::raw::c_char,
        cfuns: *const JanetReg,
    );
}
unsafe extern "C" {
    pub fn janet_cfuns_prefix(
        env: *mut JanetTable,
        regprefix: *const ::std::os::raw::c_char,
        cfuns: *const JanetReg,
    );
}
unsafe extern "C" {
    pub fn janet_resolve(
        env: *mut JanetTable,
        sym: JanetSymbol,
        out: *mut Janet,
    ) -> JanetBindingType;
}
unsafe extern "C" {
    pub fn janet_resolve_ext(env: *mut JanetTable, sym: JanetSymbol) -> JanetBinding;
}
unsafe extern "C" {
    pub fn janet_resolve_core(name: *const ::std::os::raw::c_char) -> Janet;
}
unsafe extern "C" {
    pub fn janet_cfuns_ext(
        env: *mut JanetTable,
        regprefix: *const ::std::os::raw::c_char,
        cfuns: *const JanetRegExt,
    );
}
unsafe extern "C" {
    pub fn janet_cfuns_ext_prefix(
        env: *mut JanetTable,
        regprefix: *const ::std::os::raw::c_char,
        cfuns: *const JanetRegExt,
    );
}
unsafe extern "C" {
    pub fn janet_def_sm(
        env: *mut JanetTable,
        name: *const ::std::os::raw::c_char,
        val: Janet,
        documentation: *const ::std::os::raw::c_char,
        source_file: *const ::std::os::raw::c_char,
        source_line: i32,
    );
}
unsafe extern "C" {
    pub fn janet_var_sm(
        env: *mut JanetTable,
        name: *const ::std::os::raw::c_char,
        val: Janet,
        documentation: *const ::std::os::raw::c_char,
        source_file: *const ::std::os::raw::c_char,
        source_line: i32,
    );
}
unsafe extern "C" {
    pub fn janet_register(name: *const ::std::os::raw::c_char, cfun: JanetCFunction);
}
unsafe extern "C" {
    pub fn janet_signalv(signal: JanetSignal, message: Janet) -> !;
}
unsafe extern "C" {
    pub fn janet_panicv(message: Janet) -> !;
}
unsafe extern "C" {
    pub fn janet_panic(message: *const ::std::os::raw::c_char) -> !;
}
unsafe extern "C" {
    pub fn janet_panics(message: JanetString) -> !;
}
unsafe extern "C" {
    pub fn janet_panicf(format: *const ::std::os::raw::c_char, ...) -> !;
}
unsafe extern "C" {
    pub fn janet_dynprintf(
        name: *const ::std::os::raw::c_char,
        dflt_file: *mut FILE,
        format: *const ::std::os::raw::c_char,
        ...
    );
}
unsafe extern "C" {
    pub fn janet_panic_type(x: Janet, n: i32, expected: ::std::os::raw::c_int) -> !;
}
unsafe extern "C" {
    pub fn janet_panic_abstract(x: Janet, n: i32, at: *const JanetAbstractType) -> !;
}
unsafe extern "C" {
    pub fn janet_arity(arity: i32, min: i32, max: i32);
}
unsafe extern "C" {
    pub fn janet_fixarity(arity: i32, fix: i32);
}
unsafe extern "C" {
    pub fn janet_getmethod(
        method: JanetKeyword,
        methods: *const JanetMethod,
        out: *mut Janet,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_nextmethod(methods: *const JanetMethod, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_getnumber(argv: *const Janet, n: i32) -> f64;
}
unsafe extern "C" {
    pub fn janet_getarray(argv: *const Janet, n: i32) -> *mut JanetArray;
}
unsafe extern "C" {
    pub fn janet_gettuple(argv: *const Janet, n: i32) -> JanetTuple;
}
unsafe extern "C" {
    pub fn janet_gettable(argv: *const Janet, n: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_getstruct(argv: *const Janet, n: i32) -> JanetStruct;
}
unsafe extern "C" {
    pub fn janet_getstring(argv: *const Janet, n: i32) -> JanetString;
}
unsafe extern "C" {
    pub fn janet_getcstring(argv: *const Janet, n: i32) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn janet_getcbytes(argv: *const Janet, n: i32) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn janet_getsymbol(argv: *const Janet, n: i32) -> JanetSymbol;
}
unsafe extern "C" {
    pub fn janet_getkeyword(argv: *const Janet, n: i32) -> JanetKeyword;
}
unsafe extern "C" {
    pub fn janet_getbuffer(argv: *const Janet, n: i32) -> *mut JanetBuffer;
}
unsafe extern "C" {
    pub fn janet_getfiber(argv: *const Janet, n: i32) -> *mut JanetFiber;
}
unsafe extern "C" {
    pub fn janet_getfunction(argv: *const Janet, n: i32) -> *mut JanetFunction;
}
unsafe extern "C" {
    pub fn janet_getcfunction(argv: *const Janet, n: i32) -> JanetCFunction;
}
unsafe extern "C" {
    pub fn janet_getboolean(argv: *const Janet, n: i32) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_getpointer(argv: *const Janet, n: i32) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_getnat(argv: *const Janet, n: i32) -> i32;
}
unsafe extern "C" {
    pub fn janet_getinteger(argv: *const Janet, n: i32) -> i32;
}
unsafe extern "C" {
    pub fn janet_getinteger16(argv: *const Janet, n: i32) -> i16;
}
unsafe extern "C" {
    pub fn janet_getinteger64(argv: *const Janet, n: i32) -> i64;
}
unsafe extern "C" {
    pub fn janet_getuinteger(argv: *const Janet, n: i32) -> u32;
}
unsafe extern "C" {
    pub fn janet_getuinteger16(argv: *const Janet, n: i32) -> u16;
}
